# tachyonfx

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: build.yml
benches/: cell_filter.rs  color_conversion.rs  color_interpolation.rs
docs/: dsl.md
examples/: basic-effects.rs  dsl-playground.rs  effect-showcase.rs  fx-chart.rs  minimal.rs  open-window.rs  tweens.rs
examples/common/: window.rs
src/: bounding_box.rs  buffer_renderer.rs  cell_filter.rs  cell_iter.rs  color_ext.rs  color_mapper.rs  color_space.rs  duration.rs  effect.rs  effect_manager.rs  effect_timer.rs  features.rs  interpolation.rs  lib.rs  lru_cache.rs  motion.rs  rect_ext.rs  render_effect.rs  shader.rs  simple_rng.rs
src/dsl/: arguments.rs  dsl.rs  dsl_format.rs  dsl_writer.rs  environment.rs  expr_promotion.rs  expressions.rs  method_chains.rs  mod.rs  parse_error.rs  token_parsers.rs  token_verification.rs  tokenizer.rs
src/fx/: alpha_xform.rs  ansi256.rs  consume_tick.rs  containers.rs  dissolve.rs  explode.rs  fade.rs  glitch.rs  hsl_shift.rs  mod.rs  never_complete.rs  offscreen_buffer.rs  ping_pong.rs  prolong.rs  repeat.rs  resize.rs  shader_fn.rs  sleep.rs  slide.rs  sliding_window_alpha.rs  sweep_in.rs  temporary.rs  translate.rs  translate_buffer.rs  unique.rs
src/widget/: area_registry.rs  cell_filter_registry.rs  color_resolver.rs  effect_span.rs  effect_timeline.rs  mod.rs
